--- a/index.html
+++ b/index.html
@@ -1,88 +1,2 @@
-<!doctype html>
-<html lang="tr">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>PanelPro — Dashboard</title>
-  <meta name="description" content="Profesyonel dashboard - siyah & mor tema" />
-  <link rel="stylesheet" href="assets/css/style.css">
-</head>
-<body>
-  <div class="app">
-    <aside class="sidebar">
-      <div class="logo">
-        <img src="assets/img/logo.svg" alt="Logo">
-        <div class="brand">PanelPro</div>
-      </div>
-      <nav class="menu">
-        <a href="index.html" class="active">Genel Bakış</a>
-        <a href="pages/tools.html">Araçlar</a>
-        <a href="pages/premium.html">Premium</a>
-        <a href="pages/users.html">Kullanıcılar</a>
-        <a href="pages/stats.html">İstatistikler</a>
-        <a href="pages/blog.html">Blog</a>
-        <a href="pages/affiliate.html">Affiliate</a>
-        <a href="pages/settings.html">Ayarlar</a>
-      </nav>
-      <div class="account">
-        <img src="https://ui-avatars.com/api/?name=Admin&background=5b2fa2&color=fff" alt="admin">
-        <div>Merhaba, Admin</div>
-      </div>
-    </aside>
-    <main class="main">
-      <header class="topbar">
-        <button id="toggleMenu" aria-label="toggle menu">☰</button>
-        <div class="title">Genel Bakış</div>
-        <div class="controls">🔎 Ara (Ctrl+K)</div>
-      </header>
-
-      <section class="content">
-        <div class="card kpi">
-          <h3>Günlük Ziyaret</h3>
-          <div class="big">1,328</div>
-          <div class="muted">Son 24 saat</div>
-        </div>
-        <div class="card kpi">
-          <h3>Gelir (Aylık)</h3>
-          <div class="big">₺3.420</div>
-          <div class="muted">Tahmini</div>
-        </div>
-        <div class="card kpi">
-          <h3>Premium Kullanıcılar</h3>
-          <div class="big">126</div>
-          <div class="muted">Aylık</div>
-        </div>
-
-        <div class="card wide">
-          <h3>Araçlar • Hızlı Hesaplayıcılar</h3>
-          <div class="tools-grid">
-            <div class="tool">
-              <label>Toplama</label>
-              <div class="row"><input id="a1" type="number" placeholder="Sayı 1"><input id="b1" type="number" placeholder="Sayı 2"><button id="calcAdd">Hesapla</button></div>
-            </div>
-            <div class="tool">
-              <label>KDV Hesaplama</label>
-              <div class="row"><input id="kdvAmount" type="number" placeholder="Tutar"><select id="kdvRate"><option>18</option><option>8</option><option>1</option></select><button id="calcKdv">Hesapla</button></div>
-            </div>
-            <div class="tool">
-              <label>Döviz (örnek sabit kur)</label>
-              <div class="row"><input id="fxAmount" type="number" placeholder="₺"><select id="fxPair"><option value="USD">USD</option><option value="EUR">EUR</option></select><button id="calcFx">Çevir</button></div>
-            </div>
-            <div class="tool">
-              <label>BMI</label>
-              <div class="row"><input id="bmiWeight" type="number" placeholder="kg"><input id="bmiHeight" type="number" placeholder="cm"><button id="calcBmi">Hesapla</button></div>
-            </div>
-          </div>
-          <div class="result" id="toolResult">Sonuç burada</div>
-        </div>
-
-        <div class="ad">Reklam alanı • AdSense buraya gelebilir</div>
-
-      </section>
-
-      <footer>© <span id="year"></span> PanelPro</footer>
-    </main>
-  </div>
-  <script src="assets/js/main.js"></script>
-</body>
-</html>
+<!DOCTYPE html><html><head><link rel='stylesheet' href='css/style.css'></head>
+<body><h1>HızlıHesap Dashboard</h1><img src='assets/img/logo.svg'><script src='js/app.js'></script></body></html>
