--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-<!DOCTYPE html><html><head><link rel='stylesheet' href='css/style.css'></head>
-<body><h1>HızlıHesap Dashboard</h1><img src='assets/img/logo.svg'><script src='js/app.js'></script></body></html>
+<link rel="stylesheet" href="css/style.css">
+<script src="js/app.js"></script>
+<img src="assets/img/logo.svg">
