--- a/index.html
+++ b/index.html
@@ -1,3 +1,22 @@
-<link rel="stylesheet" href="css/style.css">
-<script src="js/app.js"></script>
-<img src="assets/img/logo.svg">
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HızlıHesap Dashboard</title>
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+
+    <h1>HızlıHesap Dashboard</h1>
+
+    <!-- Logo -->
+    <img src="assets/img/logo.svg" alt="logo" width="120">
+
+    <!-- JS -->
+    <script src="js/app.js"></script>
+</body>
+</html>
