--- a/index.html
+++ b/index.html
@@ -5,18 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HızlıHesap Dashboard</title>
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="css/style.css">
-</head>
+    <!-- Düzeltilmiş CSS yolu -->
+    <link rel="stylesheet" href="style.css">
 
+    <!-- Düzeltilmiş JS yolu -->
+    <script src="app.js" defer></script>
+</head>
 <body>
 
     <h1>HızlıHesap Dashboard</h1>
 
-    <!-- Logo -->
-    <img src="assets/img/logo.svg" alt="logo" width="120">
+    <!-- Düzeltilmiş logo yolu -->
+    <img src="logo.svg" alt="Logo" width="120">
 
-    <!-- JS -->
-    <script src="js/app.js"></script>
+    <p>Dashboard yükleniyor...</p>
+
 </body>
 </html>
