--- a/index.html
+++ b/index.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HızlıHesap Dashboard</title>
 
-    <!-- Düzeltilmiş CSS yolu -->
-    <link rel="stylesheet" href="style.css">
-
-    <!-- Düzeltilmiş JS yolu -->
-    <script src="app.js" defer></script>
+    <!-- CSS -->
+    <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
+    <header class="header">
+        <img src="logo.svg" class="logo" alt="Logo">
+        <h1>HızlıHesap Dashboard</h1>
+    </header>
 
-    <h1>HızlıHesap Dashboard</h1>
+    <main>
+        <p class="loading">Dashboard yükleniyor...</p>
+    </main>
 
-    <!-- Düzeltilmiş logo yolu -->
-    <img src="logo.svg" alt="Logo" width="120">
-
-    <p>Dashboard yükleniyor...</p>
-
+    <!-- JS -->
+    <script src="app.js"></script>
 </body>
 </html>
